NetBSD Problem Report #43817

From martin@aprisoft.de  Mon Aug 30 18:56:44 2010
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id B82A963B89F
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 30 Aug 2010 18:56:43 +0000 (UTC)
Message-Id: <20100830173737.F28DEAF5818@emmas.aprisoft.de>
Date: Mon, 30 Aug 2010 19:37:37 +0200 (CEST)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@gnats.NetBSD.org
Subject: current kernel breaks tcsh
X-Send-Pr-Version: 3.95

>Number:         43817
>Category:       kern
>Synopsis:       current kernel breaks tcsh
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Aug 30 19:00:00 +0000 2010
>Closed-Date:    Wed Sep 08 08:14:49 +0000 2010
>Last-Modified:  Wed Sep 08 08:14:49 +0000 2010
>Originator:     Martin Husemann
>Release:        NetBSD 5.99.38
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD after-hours.aprisoft.de 5.99.38 NetBSD 5.99.38 (GENERIC) #10: Thu Jul 29 10:42:53 CEST 2010 martin@emmas.aprisoft.de:/nelly/usr/src/sys/arch/sparc64/compile/GENERIC sparc64
Architecture: sparc64
Machine: sparc64
>Description:

Updating the kernel on this machine to -current breaks tcsh (stock, from pkgsrc),
it dies with:

    16      1 tcsh     CALL  break(0x26b918)
    16      1 tcsh     RET   break -1 errno 12 Cannot allocate memory
    16      1 tcsh     CALL  break(0x26b919)
    16      1 tcsh     RET   break -1 errno 12 Cannot allocate memory
    16      1 tcsh     CALL  break(0x26c118)
    16      1 tcsh     RET   break -1 errno 12 Cannot allocate memory
    16      1 tcsh     NAMI  "tcsh.core"
...

>How-To-Repeat:
Boot a -current kernel, try to exec older tcsh (binary from June 1).

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: Joerg Sonnenberger <joerg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43817 CVS commit: src/sys/kern
Date: Tue, 7 Sep 2010 21:32:03 +0000

 Module Name:	src
 Committed By:	joerg
 Date:		Tue Sep  7 21:32:03 UTC 2010

 Modified Files:
 	src/sys/kern: exec_elf.c

 Log Message:
 Remember the end of the last text segment and set up a fake data segment
 if size 0 and starting after the text segments, if no data segment was
 found. Unbreaks sbrk on platforms where all loaded segments are
 executable (PR 43817). The cast of executable segments after data
 segments is left out for now.


 To generate a diff of this commit:
 cvs rdiff -u -r1.24 -r1.25 src/sys/kern/exec_elf.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Hauke Fath <hauke@Espresso.Rhein-Neckar.DE>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@NetBSD.org, gnats-admin@NetBSD.org, martin@NetBSD.org
Subject: Re: PR/43817 CVS commit: src/sys/kern
Date: Wed, 8 Sep 2010 09:52:16 +0200

 At 21:35 Uhr +0000 7.9.2010, Joerg Sonnenberger wrote:
 >The following reply was made to PR kern/43817; it has been noted by GNATS.
 >
 >From: Joerg Sonnenberger <joerg@netbsd.org>
 >To: gnats-bugs@gnats.NetBSD.org
 >Cc:
 >Subject: PR/43817 CVS commit: src/sys/kern
 >Date: Tue, 7 Sep 2010 21:32:03 +0000
 >
 > Module Name:	src
 > Committed By:	joerg
 > Date:		Tue Sep  7 21:32:03 UTC 2010
 >
 > Modified Files:
 > 	src/sys/kern: exec_elf.c

 FTR, this change fixes the sparc issue I reported on current-users.

 	hauke

 --
 "It's never straight up and down"     (DEVO)


State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Wed, 08 Sep 2010 08:14:49 +0000
State-Changed-Why:
fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.