Remember the end of the last text segment and set up a fake data segment if size 0 and starting after the text segments, if no data segment was found. Unbreaks sbrk on platforms where all loaded segments are executable (PR 43817). The cast of executable segments after data segments is left out for now.